	ipmi_sdr_cache_create): Fix parameter checks.

	* libfreeipmi/src/ipmi-sdr-repo-cmds.c (fill_kcs_get_repo_info,
	fill_kcs_reserve_repo, fill_kcs_get_repo_alloc_info,
	fill_kcs_get_sdr_chunk, ipmi_cmd_get_sdr_repo_info2,
	ipmi_cmd_get_sdr_repo_alloc_info2, ipmi_cmd_reserve_sdr_repo2,
	ipmi_cmd_get_sensor_record_header2, ipmi_cmd_get_sdr_chunk2,
	ipmi_cmd_get_sdr2): Fix parameter checks.
	
2006-02-01  Albert Chu  <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-msg-support-cmds.c
	(fill_cmd_activate_session, ipmi_lan_open_session,
	fill_kcs_get_user_name): Fix parameter checks.

	* libfreeipmi/src/ipmi-chassis-cmds.h
	(IPMI_CHASSIS_FORCE_IDENTIFY_VALID): New macro.

	* libfreeipmi/src/ipmi-chassis-cmds.c (fill_cmd_chassis_identify):
	Fix parameter checks.
	
	* libfreeipmi/src/fiid.c (__fiid_template_make): Fix string copy
	corner case.

	* libfreeipmi/src/ipmi-lan-cmds.h, libfreeipmi/src/ipmi-lan-cmds.c
	(ipmi_cmd_lan_set_auth_type_enables2,
	fill_lan_set_auth_type_enables): Make functions pristine to IPMI
	spec.

	* fish/src/bmc-conf2.c (_fill_lan_set_auth_type_enables): New
	function.

	* fish/src/bmc-conf2.c (set_bmc_lan_conf_auth_type_enables): Use
	convenience template.

	* libfreeipmi/src/ipmi-lan-cmds.c (fill_lan_set_ip_addr_source,
	fill_lan_set_ip_addr, fill_lan_set_vlan_id, fill_suspend_bmc_arps,
	ipmi_cmd_lan_set_arp2, ipmi_lan_set_gratuitous_arp_interval2,
	ipmi_cmd_lan_set_auth_type_enables2,
	ipmi_cmd_lan_set_ip_addr_source2, ipmi_cmd_lan_set_ip_addr2,
	ipmi_cmd_lan_set_default_gw_ip_addr2,
	ipmi_cmd_lan_set_backup_gw_ip_addr2,
	ipmi_cmd_lan_set_backup_gw_ip_addr2,
	ipmi_cmd_lan_set_vlan_priority2, ipmi_cmd_lan_set_subnet_mask2,
	ipmi_cmd_lan_set_mac_addr2, ipmi_cmd_lan_set_default_gw_mac_addr2,
	ipmi_cmd_lan_set_backup_gw_mac_addr2, ipmi_cmd_lan_get_arp2,
	ipmi_cmd_lan_get_gratuitous_arp_interval2,
	ipmi_cmd_lan_get_auth_type_enables2,
	ipmi_cmd_lan_get_ip_addr_source2, ipmi_cmd_lan_get_ip_addr2,
	ipmi_cmd_lan_get_default_gw_ip_addr2,