@@ -335,20 +335,20 @@ ipmi_cmd_get_sensor_record_header2 (ipmi_device_t *dev,
   fiid_obj_alloca (obj_cmd_rq, tmpl_get_sdr_rq);
   if (obj_cmd_rq == NULL)
     {
-      ipmi_xfree (tmpl_var_len_get_sdr_rs);
+      fiid_template_free (tmpl_var_len_get_sdr_rs);
       return (-1);
     }
   fiid_obj_alloca (local_obj_cmd_rs, tmpl_var_len_get_sdr_rs);
   if (local_obj_cmd_rs == NULL)
     {
-      ipmi_xfree (tmpl_var_len_get_sdr_rs);
+      fiid_template_free (tmpl_var_len_get_sdr_rs);
       return (-1);
     }
   
   if (fill_kcs_get_sensor_record_header (obj_cmd_rq, 
 					 record_id) != 0)
     {
-      ipmi_xfree (tmpl_var_len_get_sdr_rs);
+      fiid_template_free (tmpl_var_len_get_sdr_rs);
       return (-1);
     }
   if (ipmi_cmd (dev, 
@@ -359,7 +359,7 @@ ipmi_cmd_get_sensor_record_header2 (ipmi_device_t *dev,
 		local_obj_cmd_rs, 
 		tmpl_var_len_get_sdr_rs) != 0)
     {
-      ipmi_xfree (tmpl_var_len_get_sdr_rs);
+      fiid_template_free (tmpl_var_len_get_sdr_rs);
       return (-1);
     }
   fiid_obj_get_data (local_obj_cmd_rs, 
@@ -373,7 +373,7 @@ ipmi_cmd_get_sensor_record_header2 (ipmi_device_t *dev,
 		     sensor_record_header,
                      fiid_obj_len_bytes(tmpl_sdr_sensor_record_header));
   
-  ipmi_xfree (tmpl_var_len_get_sdr_rs);
+  fiid_template_free (tmpl_var_len_get_sdr_rs);
   
   ERR (ipmi_comp_test (obj_cmd_rs) == 1);
   
@@ -414,13 +414,13 @@ ipmi_cmd_get_sdr_chunk2 (ipmi_device_t *dev,
   fiid_obj_alloca (obj_cmd_rq, tmpl_get_sdr_rq);
   if (obj_cmd_rq == NULL)
     {
-      ipmi_xfree (tmpl_var_len_get_sdr_rs);
+      fiid_template_free (tmpl_var_len_get_sdr_rs);
       return (-1);
     }
   fiid_obj_alloca (local_obj_cmd_rs, tmpl_var_len_get_sdr_rs);
   if (local_obj_cmd_rs == NULL)
     {
-      ipmi_xfree (tmpl_var_len_get_sdr_rs);
+      fiid_template_free (tmpl_var_len_get_sdr_rs);
       return (-1);
     }
   
@@ -428,7 +428,7 @@ ipmi_cmd_get_sdr_chunk2 (ipmi_device_t *dev,
 			      record_id, record_offset, 
 			      bytes_read) != 0)
     {
-      ipmi_xfree (tmpl_var_len_get_sdr_rs);
+      fiid_template_free (tmpl_var_len_get_sdr_rs);
       return (-1);
     }
   if (ipmi_cmd (dev, 
@@ -439,7 +439,7 @@ ipmi_cmd_get_sdr_chunk2 (ipmi_device_t *dev,
 		local_obj_cmd_rs, 
 		tmpl_var_len_get_sdr_rs) != 0)
     {
-      ipmi_xfree (tmpl_var_len_get_sdr_rs);
+      fiid_template_free (tmpl_var_len_get_sdr_rs);
       return (-1);
     }
   
@@ -454,7 +454,7 @@ ipmi_cmd_get_sdr_chunk2 (ipmi_device_t *dev,
 		     sensor_record_chunk,
                      sensor_record_chunk_len);
   
-  ipmi_xfree (tmpl_var_len_get_sdr_rs);
+  fiid_template_free (tmpl_var_len_get_sdr_rs);
   
   ERR (ipmi_comp_test (obj_cmd_rs) == 1);
   
